# image_compressor_flask

backend/: pyproject.toml
backend/tests/: test_web_compressor.py
backend/web_compressor/: app.py  config.py  models.py
backend/web_compressor/migrations/versions/: c42a56c78fc4_initial_migration.py
backend/web_compressor/web/static/: manifest.json
backend/web_compressor/web/static/css/: Root.css  main.css
backend/web_compressor/web/static/js/: Root.js  main.js
backend/web_compressor/web/templates/app/: index.j2
backend/web_compressor/web/templates/security/: _macros.html  register_user.html
frontend/: components.d.ts  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: Navigation.vue  Project.vue  Upload.vue
frontend/src/router/: index.ts
