[tool.poetry]
name = "web-compressor"
version = "0.1.0"
description = ""
authors = ["kiortir <84376533+kiortir@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
autopep8 = "^1.6.0"
Jinja2 = "^3.1.2"
python-dotenv = "^0.20.0"
djlint = "^1.1.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Alembic = "^2.0.1"
psycopg2 = "^2.9.3"
Flask-User = "^1.0.2"
Flask-BabelEx = "^0.9.4"
email-validator = "^1.2.1"
Flask-Admin = "^1.6.0"
Flask-Security = "^3.0.0"
Flask-Migrate = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
